--- a/Librerias/SendEmail.xaml
+++ b/Librerias/SendEmail.xaml
@@ -15,7 +15,7 @@
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1794,7333</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>996,7333</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -163,6 +163,7 @@
       <Variable x:TypeArguments="x:String" Name="str_AsuntoCorreo" />
       <Variable x:TypeArguments="x:Boolean" Name="bl_outllokExist" />
       <Variable x:TypeArguments="x:String" Default="tasklist | findstr OUTLOOK.EXE" Name="str_command" />
+      <Variable x:TypeArguments="x:String" Name="ReportFile" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
